<resources>
    <string name="facebook_app_id">2007211102837293</string>
    <string name="app_name">Portfolios</string>
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_analysis">Analysis</string>
    <string name="content_description_sailing">Sailing</string>
    <string name="content_description_boating">Boating</string>
    <string name="content_description_wechat_sign_in">Wechat sign in</string>
    <string name="content_description_weibo_sign_in">Weibo sign in</string>
    <string name="content_description_navigation">boating</string>
    <string name="content_description_avatar">Avatar</string>
    <string name="title_activity_about">About this app</string>
    <string name="title_activity_create_portfolio">Create Portfolio</string>
    <string name="title_activity_edit_portfolio">Edit Portfolio</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_main">Portfolios</string>
    <string name="title_activity_portfolio">Portfolio</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="title_portfolio_holdings">Holdings</string>
    <string name="title_portfolio_transactions">Transactions</string>
    <string name="title_delete_portfolio">Delete Portfolio</string>
    <string name="title_delete_transaction">Delete Transaction</string>
    <string name="title_activity_analysis_portfolio_list">Analysis</string>
    <string name="label_portfolio_list_type">Type:</string>
    <string name="label_portfolio_list_name">Name:</string>
    <string name="label_portfolio_list_asset_class">Primary asset class:</string>
    <string name="label_portfolio_list_description">Description:</string>
    <string name="label_portfolio_list_benchmark">Benchmark:</string>
    <string name="label_portfolio_list_currency">Currency:</string>
    <string name="hint_portfolio_list_name">Aggressive</string>
    <string name="label_sign_in">Sign in for portfolio services</string>
    <string name="label_explore_as_a_guest">Explore as a guest</string>
    <string name="label_profile_user_id">User ID:</string>
    <string name="label_profile_screen_name">Screen name:</string>
    <string name="label_profile_location">Location:</string>
    <string name="label_coming_soon">Coming soon…</string>
    <string name="label_delete">Delete</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_okay">Okay</string>
    <string name="label_items_selected">%1$s selected</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_image">Portfolios Management</string>
    <string-array name="portfolio_list_types">
        <item>Portfolio</item>
        <item>List</item>
    </string-array>
    <string-array name="portfolio_list_assert_classes">
        <item>Equity</item>
        <item>Fixed Income</item>
    </string-array>
    <string-array name="transaction_types">
        <item>Buying</item>
        <item>Selling</item>
        <item>ShortSelling</item>
        <item>shortCovering</item>
    </string-array>
    <string-array name="portfolio_list_currencies">
        <item>CNY</item>
        <item>USD</item>
        <item>JPY</item>
        <item>EUR</item>
        <item>GBP</item>
    </string-array>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_auto_update">Auto update</string>
    <string name="pref_title_server_address">Server address</string>
    <string name="pref_default_server_address">https://grpm.applinzi.com</string>
    <string name="pref_title_notification_frequency">Notification frequency</string>
    <string name="label_date">Date:</string>
    <string name="label_ticker">Ticker:</string>
    <string name="label_transaction_type">Transaction Type:</string>
    <string name="label_price">Price:</string>
    <string name="label_amount">Amount:</string>
    <string name="label_commission">Commission:</string>
    <string name="label_other_charges">Other Charges:</string>
    <string name="label_name">Name</string>
    <string name="label_value">Value</string>
    <string name="label_daily">Daily</string>
    <string name="label_total">Total</string>
    <string name="label_units">Units</string>

    <string name="column_label_ticker">Ticker</string>
    <string name="column_label_commission">Commn</string>

    <string-array name="pref_notification_frequency_titles">
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="pref_notification_frequency_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="label_nav_portfolios">Portfolios</string>
    <string name="label_nav_lists">Lists</string>
    <string name="label_nav_market">Market</string>
    <string name="label_nav_alerts">Alerts</string>

    <string name="message_provide_a_valid_portfolio_name">Please provide a valid portfolio name.</string>
    <string name="message_provide_a_valid_ticker">Please provide a valid ticker.</string>
    <string name="message_price_must_be_positive">Price must be positive.</string>
    <string name="message_amount_must_be_positive">Amount must be positive.</string>
    <string name="message_confirm_for_deleting">Are you sure to delete them?</string>

    <string name="message_retrieving_account_failed">Retrieving account failed: %1$s.</string>
    <string name="message_adding_portfolio_succeeded">Adding portfolio succeeded.</string>
    <string name="message_modifying_portfolio_succeeded">Modifying portfolio succeeded.</string>
    <string name="message_deleting_portfolio_succeeded">Deleting portfolio succeeded.</string>
    <string name="message_adding_portfolio_failed">Adding portfolio failed: %1$s</string>
    <string name="message_modifying_portfolio_failed">Modifying portfolio failed: %1$s</string>
    <string name="message_deleting_portfolio_failed">Deleting portfolio failed: %1$s</string>
    <string name="message_retrieving_portfolio_report_failed">Retrieving portfolio report failed: %1$s.</string>
    <string name="message_adding_transaction_succeeded">Adding transaction succeeded.</string>
    <string name="message_modifying_transaction_succeeded">Modifying transaction succeeded.</string>
    <string name="message_adding_transaction_failed">Adding transaction failed: %1$s</string>
    <string name="message_modifying_transaction_failed">Modifying transaction failed: %1$s.</string>
    <string name="message_deleting_transaction_failed">Deleting transaction failed: %1$s.</string>

    <string name="message_authorization_canceled">%1$s authorization canceled.</string>
    <string name="message_authorization_succeeded">%1$s authorization succeeded.</string>
    <string name="message_authorization_error">%1$s authorization error: %2$s.</string>

    <string name="message_binding_account_succeeded">Binding account succeeded.</string>
    <string name="message_binding_account_failed">Binding account failed: %1$s.</string>

    <string name="message_unknown_error">Unknown error.</string>
    <string name="message_please_wait">Please wait....</string>

    <string name="label_logout_and_exit">Logout &amp; Exit</string>

    <string name="title_activity_send_logs">Send Logs</string>
    <string name="label_send_logs">Send Logs</string>
    <string name="label_skip_send_logs">Skip</string>
    <string name="content_description_sorry">We are sorry!</string>
    <string name="label_send_log_description"><![CDATA[<br>The application was crashed during last run.<br><br><b>Please tell us about this problem.</b><br><br>We have created an error report that you can send to us. We will treat this report as confidential and anonymous.]]></string>
    <string name="label_bind_to_wechat">Bind to Wechat</string>
    <string name="prompt_bing_to_wechat">Please type your binding key:</string>
    <string name="label_portfolio_analysis_efficient_frontier">Efficient Frontier</string>
    <string name="label_portfolio_analysis_allocation">Allocation</string>
    <string name="title_close">Close</string>
    <string name="label_weight">Weight</string>
    <string name="label_return">Return</string>
    <string name="label_standard_deviation">SD</string>
    <string name="label_sharpe">Sharpe</string>

</resources>
