<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/label_nav_portfolios" />
        <item
            android:id="@+id/nav_lists"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/label_nav_lists" />
        <item
            android:id="@+id/nav_market"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/label_nav_market" />

        <item
            android:id="@+id/nav_alerts"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/label_nav_alerts" />
    </group>

</menu>
