<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.PortfolioTransactionFragment">


    <LinearLayout
        android:id="@+id/layout_column_header_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_ticker" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_units"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_commission"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_total"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <View
        android:id="@+id/layout_column_header_underline_transaction"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/layout_column_header_transaction"
        android:background="@android:color/darker_gray" />

    <ListView
        android:id="@+id/list_view_transactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/layout_column_header_underline_transaction"
        android:choiceMode="multipleChoiceModal"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="false" />

</RelativeLayout>
