<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreatePortfolioListActivity"
    tools:showIn="@layout/activity_create_portfolio_list">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_portfolio_list_type"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/spinner_portfolio_list_type"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_portfolio_list_name" />

            <EditText
                android:id="@+id/edit_text_portfolio_list_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="true"
                android:enabled="true"
                android:hint="@string/hint_portfolio_list_name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_portfolio_list_asset_class" />

            <Spinner
                android:id="@+id/spinner_portfolio_list_asset_class"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"

                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_portfolio_list_benchmark" />


            <EditText
                android:id="@+id/edit_text_portfolio_list_benchmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="true"
                android:enabled="true"
                android:hint="@string/hint_portfolio_list_name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_portfolio_list_currency" />

            <Spinner
                android:id="@+id/spinner_portfolio_list_currency"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_portfolio_list_description" />

            <EditText
                android:id="@+id/edit_text_portfolio_list_description"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
