<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_asset_allocation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.AppCompat.Dialog">

    <!--TextView
        android:id="@+id/text_view_portfolio_allocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_portfolio_analysis_allocation"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" /-->

    <LinearLayout
        android:id="@+id/layout_portfolio_allocation_chart"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <lecho.lib.hellocharts.view.PieChartView
            android:id="@+id/chart_portfolio_current_analysis_allocation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <lecho.lib.hellocharts.view.PieChartView
            android:id="@+id/chart_portfolio_analysis_selected_allocation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_portfolio_allocation_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_portfolio_allocation_chart"
        android:layout_above="@+id/layout_portfolio_allocation_button"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_column_header_asset_allocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/column_label_ticker" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_weight"
                android:textAlignment="textEnd" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_return"
                android:textAlignment="textEnd" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_standard_deviation"
                android:textAlignment="textEnd" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_sharpe"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <View
            android:id="@+id/layout_column_header_underline_asset_allocation"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/list_view_asset_allocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:choiceMode="singleChoice"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_portfolio_allocation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_asset_allocation_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_close" />
    </LinearLayout>

</RelativeLayout>